--- a/challenges/challenge-3/challenge.scss
+++ b/challenges/challenge-3/challenge.scss
@@ -5,7 +5,7 @@
 //
 //  .my-paragraph {
 //    font-size: 32px;
-//    font-size: 2ren;
+//    font-size: 2rem;
 //  }
 //
 // The mixin should get a parameter with the pixel font size. If the parameter
