--- a/challenges/challenge-5/challenge.scss
+++ b/challenges/challenge-5/challenge.scss
@@ -2,7 +2,7 @@
 // Challenge description:
 //
 // Use one `@each` loop to generate the two class selectors `.character-darth`
-// and `.chrachter-obiwan` out of the $characters map and set the color,
+// and `.character-obiwan` out of the $characters map and set the color,
 // background-color and background-image for each selector.
 // ============================================================================
 
