--- a/challenges/challenge-4/challenge.scss
+++ b/challenges/challenge-4/challenge.scss
@@ -14,4 +14,9 @@
   $base-font-size: 15px;
   $heading-scale: 3;
 
+  @for $i from 1 through 6 {
+    h#{$i} {
+      font-size: $base-font-size + $heading-scale * (6 - $i);
+    }
+  }
 }
